--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "apollo-server-lambda": "^3.11.1",
     "apollo-server-micro": "^3.11.1",
     "apollo-server-plugin-http-headers": "^0.1.4",
+    "country-code-lookup": "^0.1.3",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.4",
     "debounce-promise": "^3.1.2",
     "dotenv": "^16.0.0",
+    "geoip-lite": "^1.4.10",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
     "is-url": "^1.2.4",
